# line-straddler

./: .drone.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  MAINTAINERS.md  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
.woodpecker/: github.yml  msrv.yml  test.yml
ci/: ci.sh
src/: lib.rs
tests/: smoke.rs
