[package]
name = "line-straddler"
version = "0.2.3"
edition = "2018"
authors = ["John Nunley <dev@notgull.net>"]
description = "Determine how lines through text (underlines, strikethroughs, etc) should be rendered."
repository = "https://codeberg.org/notgull/line-straddler"
homepage = "https://codeberg.org/notgull/line-straddler"
license = "LGPL-3.0-or-later OR MPL-2.0"
rust-version = "1.63"

[dependencies]
libm = { version = "0.2.6", optional = true }

[features]
default = ["std"]
std = ["alloc"]
alloc = []

[dev-dependencies]
approx_eq = "0.1.8"
